fixed scroller width issue on firefox and styled scrollbar for chrome

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -53,137 +53,56 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
 body {
-  line-height: 1;
+	line-height: 1;
 }
-ol,
-ul {
-  list-style: none;
+ol, ul {
+	list-style: none;
 }
-blockquote,
-q {
-  quotes: none;
+blockquote, q {
+	quotes: none;
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
+
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
@@ -567,7 +486,7 @@ body {
 }
 
 .container {
-  margin-inline: auto;
+  margin: auto;
   max-width: 90rem;
 }
 
@@ -763,8 +682,25 @@ body {
 }
 
 @media (min-width: 55em) {
+  .primary-header {
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+  }
+
+  .logo {
+    width: 15rem;
+  }
+
   .primary-navigation {
     margin-block: .5rem;
+  }
+
+  .search-bar-container {
+    margin-bottom: 0;
+  }
+
+  .search-bar {
+    height: 2rem;
   }
 }
 
@@ -856,11 +792,13 @@ body {
   
   }
 
-  .carousel-container {
-    grid-column: 2/ 12;
-    grid-row: 1;
+  section {
+    grid-column: 2/12;
   }
 
+  .trailers {
+    grid-column: 1 / 13;
+  }
 }
 
 /* image carousel */
@@ -981,6 +919,9 @@ body {
   border-radius: 20px;
 }
  /*scroller*/
+ section {
+  max-width: 100%;
+ }
 
  .scroller-container {
   width: 100%;
@@ -990,6 +931,17 @@ body {
   flex-shrink: 0;
   --gap: 1.5rem;
   padding-inline: 1rem;
+ }
+
+ .scroller-container::-webkit-scrollbar {
+  background-color: hsl(var(--clr-white) / .2);
+  border-radius: 20px;
+ }
+
+ .scroller-container::-webkit-scrollbar-thumb {
+  background-color: hsla(184, 98%, 53%, .3);
+  border-radius: 20px;
+  border: 1px solid hsl(var(--clr-dark));
  }
 
  .scroller-card {
